// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`back button absolute renders with absolute 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "left": 5,
        "position": "absolute",
        "top": 25,
      },
    ]
  }
>
  <IconButton
    name="backIcon"
    onPress={[Function]}
    testID="BackButton"
    type="MissionHub"
  />
</RCTSafeAreaView>
`;

exports[`back button renders normally 1`] = `
<_class
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      undefined,
      null,
    ]
  }
>
  <IconButton
    name="backIcon"
    onPress={[Function]}
    testID="BackButton"
    type="MissionHub"
  />
</_class>
`;
